ERR-5509 -- дополнить описание метода AttachRequestRevocationSignature

--- a/modules/BackOffice-ObjectModel-Services-IPartnersService/pages/IPowerOfAttorneyService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IPartnersService/pages/IPowerOfAttorneyService_IN.adoc
@@ -278,7 +278,7 @@ a|Подписывает заявление на отзыв довереннос
 Примечание: Заявление на отзыв должно быть сформировано
 
 |`AttachRequestRevocationSignature(PowerOfAttorney, byte[]);`
-a|Загружает сформированную подпись отзыва доверенности в СКД
+a|Загружает сформированную подпись отзыва доверенности в СКД. При добавлении подписи проверяется что в её сертификате у владельца СНИЛС соответствует тому, что в МЧД. Проверка выполняется по доверителю и представителю, `PowerOfAttorneyMachineReadableInfo.RepresentativesSnils` и `PowerOfAttorneyMachineReadableInfo.PrincipalsSnils`. Если СНИЛС из сертификата не соответствует указанному для доверителя или представителя, будет возвращена ошибка.
 
 .Параметры:
 * `powerOfAttorney` -- СКД
