TSK-5138 / GBL-3187 -- правки по документации модуля ЭДО

--- a/modules/BackOffice-ObjectModel-BaseCard/pages/BaseCardExternalPowerOfAttorney_CL.adoc
+++ b/modules/BackOffice-ObjectModel-BaseCard/pages/BaseCardExternalPowerOfAttorney_CL.adoc
@@ -1,6 +1,6 @@
 = BaseCardExternalPowerOfAttorney -- класс
 
-Базовая карточка сторонней доверенности для хранения информации о машиночитаемых доверенностях контрагентов, поступающих от операторов ЭДО
+Раздел списка подписей для хранения информации о машиночитаемых доверенностях контрагентов
 
 * *Пространство имён:* `xref:Platform-ObjectModel:ObjectModel_NS.adoc[DocsVision.BackOffice.ObjectModel]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
