--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -10,7 +10,7 @@
 +
 ** `xref:BackOffice-ObjectModel-Services-Entities:Entities/FindPowerOfAttorneyCardsResults_CL.adoc[]` -- Содержит результаты поиска использования кодов полномочий в СКД.
 ** `xref:BackOffice-ObjectModel-Services-Entities:Entities/FindPowerOfAttorneyCardsResultsItem_CL.adoc[]` -- Результат поиска использования кода полномочий в СКД.
-** `xref:BackOffice-ObjectModel-BaseCard:BaseCardExternalPowerOfAttorney_CL.adoc[BaseCardExternalPowerOfAttorney]` -- Базовая карточка сторонней доверенности для хранения информации о машиночитаемых доверенностях контрагентов, поступающих от операторов ЭДО.
+** `xref:BackOffice-ObjectModel-BaseCard:BaseCardExternalPowerOfAttorney_CL.adoc[BaseCardExternalPowerOfAttorney]` -- Раздел списка подписей для хранения информации о машиночитаемых доверенностях контрагентов.
 ** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorney_CL.adoc[PowerOfAttorney]` -- системная карточка доверенности.
 ** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyMainInfo_CL.adoc[PowerOfAttorneyMainInfo]` -- представляет секцию "Основная информация" системной карточки доверенности.
 ** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentative_CL.adoc[PowerOfAttorneyRepresentative]` -- представляет секцию "Представитель" системной карточки доверенности.
