ERR-5784 -- ошибки в описании методов

--- a/modules/BackOffice-ObjectModel-Services-IPartnersService/pages/IPowerOfAttorneyService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IPartnersService/pages/IPowerOfAttorneyService_IN.adoc
@@ -31,7 +31,7 @@ a|Создаёт новую СКД для представителя -- физи
 
 |`CreatePowerOfAttorney(PowerOfAttorneyData, StaffEmployee,
 StaffEmployee, PowersPowerOfAttorneyFormat, PowerOfAttorneyHandlingFlags)`
-a|Создаёт новую СКД для представителя -- физического лица
+a|Создаёт новую СКД в рамках передоверия для представителя -- физического лица
 
 .Параметры:
 * `powerOfAttorneyData` -- Данные доверенности
@@ -54,7 +54,7 @@ a|Создаёт новую СКД для представителя -- юрид
 Возвращаемое значение: карточка доверенности
 
 |`CreatePowerOfAttorney(PowerOfAttorneyData, StaffUnit, StaffEmployee, PowersPowerOfAttorneyFormat, PowerOfAttorneyHandlingFlags);`
-a|Создаёт новую СКД для представителя -- юридического лица
+a|Создаёт новую СКД в рамках передоверия для представителя -- юридического лица
 
 .Параметры:
 * `powerOfAttorneyData` -- Данные доверенности
