ERR-5784 -- правки в описании методов

--- a/modules/BackOffice-ObjectModel-Services-IPartnersService/pages/IPowerOfAttorneyService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IPartnersService/pages/IPowerOfAttorneyService_IN.adoc
@@ -147,7 +147,7 @@ PowerOfAttorney,
 PowerOfAttorneySignatureFormat,
 Func<string, ObjectContext, PowersCode>,
 PowerOfAttorneyHandlingFlags);`
-a|Создаёт новую СКД для представителя -- физического лица из файла МЧД
+a|Создаёт новую СКД для представителя -- физического лица из файла МЧД, выданной в порядке передоверия
 
 .Параметры:
 * `machineReadableData` -- Данные МЧД с электронной подписью
@@ -171,7 +171,7 @@ PowersPowerOfAttorneyFormat,
 PowerOfAttorneySignatureFormat,
 Func<string, ObjectContext, PowersCode>,
 PowerOfAttorneyHandlingFlags);`
-a|Создаёт новую СКД для представителя -- физического лица из файла МЧД
+a|Создаёт новую СКД для представителя -- юридического лица из файла МЧД
 
 .Параметры:
 * `machineReadableData` -- Данные МЧД с электронной подписью
@@ -195,7 +195,7 @@ PowerOfAttorney,
 PowerOfAttorneySignatureFormat,
 Func<string, ObjectContext, PowersCode>,
 PowerOfAttorneyHandlingFlags);`
-a|Создаёт новую СКД для представителя -- юридического лица из файла МЧД
+a|Создаёт новую СКД для представителя -- юридического лица из файла МЧД, выданной в порядке передоверия
 
 .Параметры:
 * `machineReadableData` -- Данные МЧД с электронной подписью
