GBL-3338 / TSK-5465 -- МЧД. Изменение для СведСистОтм (002) и СведСист (EMCHD_1) - ссылка на систему для проверки МЧД

--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/Entities_NS.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/Entities_NS.adoc
@@ -197,6 +197,9 @@
 |===
 |Перечисление |Описание
 
+|`xref:Entities/PowerOfAttorneyHandlingFlags_EN.adoc[PowerOfAttorneyHandlingFlags]`
+|Флаги обработки доверенностей.
+
 |`xref:Entities/BusinessProcessErrorType_EN.adoc[BusinessProcessErrorType]` |Определяет типы ошибок формируемых при проверке бизнес-процесса.
 |`xref:Entities/DocumentPropertyDirection_EN.adoc[DocumentPropertyDirection]` |Определяет направление синхронизации свойств документа и полей карточки.
 |`xref:Entities/GridViewFieldCollectionType_EN.adoc[GridViewFieldCollectionType]` |Определяет тип отображаемого поля справочника сотрудников или контрагентов.
