--- a/modules/BackOffice-ObjectModel-Services-IPartnersService/pages/IPowerOfAttorneyService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IPartnersService/pages/IPowerOfAttorneyService_IN.adoc
@@ -365,18 +365,23 @@ a|Выполняет поиск доверенностей по условиям
 * `filter` -- Дополнительные условия фильтрации найденных доверенностей
 
 Возвращаемое значение: информация о найденных доверенностях
+
+|`IEnumerable<PowerOfAttorney> GetParentalPowerOfAttorneys(PowerOfAttorney powerOfAttorney);`
+a|Получает родительские доверенности от заданной.
+
+* `powerOfAttorney` -- СКД
 |===
 
-== Перечисления
-
-[cols=",",options="header"]
-|===
-|Перечисление |Описание
-
-|`PowerOfAttorneyHandlingFlags`
-a|Флаги обработки доверенностей
-
-.Члены:
-* `None = 0` -- Нет
-* `SkipEntityMatchCheck = 1` -- Не проверять соответствие сущностей доверенности со справочниками
-|===
+// == Перечисления
+//
+// [cols=",",options="header"]
+// |===
+// |Перечисление |Описание
+//
+// |`PowerOfAttorneyHandlingFlags`
+// a|Флаги обработки доверенностей
+//
+// .Члены:
+// * `None = 0` -- Нет
+// * `SkipEntityMatchCheck = 1` -- Не проверять соответствие сущностей доверенности со справочниками
+// |===
