--- a/modules/ROOT/partials/bo-om-services-entities.adoc
+++ b/modules/ROOT/partials/bo-om-services-entities.adoc
@@ -154,6 +154,7 @@
 ******** xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVELData.SoleProprietorInfo1_CL.adoc[]
 
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyMachineReadableInfo_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyHandlingFlags_EN.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyVerification_CL.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/ImportESNSIResults_CL.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-Entities:Entities/IPowersService_IN.adoc[]
