--- a/modules/BackOffice-DigitalSignature/pages/TimestampType_EN.adoc
+++ b/modules/BackOffice-DigitalSignature/pages/TimestampType_EN.adoc
@@ -18,7 +18,7 @@ public enum TimestampType
 |===
 |Имя члена |Описание
 |`Unknown = 0` |Неизвестный тип штампа
-|`Cades_T = 1` |`Cades_T
-|`Cades_XLT1 = 2` |`Cades_XLT1
-|`Cades_A = 3` |`Cades_A
+|`Cades_T = 1` |`Cades_T`
+|`Cades_XLT1 = 2` |`Cades_XLT1`
+|`Cades_A = 3` |`Cades_A`
 |===
