ERR-5443 / SUP-8769 -- регистрация и сборка расширений в ДВ 6.1

--- a/modules/solutions/pages/extensions/extensions.adoc
+++ b/modules/solutions/pages/extensions/extensions.adoc
@@ -13,3 +13,46 @@
 .В данном разделе
 * "xref:extensions/server-plugins.adoc[Серверные расширения]"
 * "xref:extensions/console-plugin.adoc[Модуль расширения Консоли настройки]"
+
+[#linux]
+== Разработка расширений для Linux
+
+При разработке и регистрации расширений в {dv} версии 6.1 необходимо учитывать:
+
+* Проекты существующих расширений необходимо перевести на .NET 6, новые расширения должны разрабатываться в .NET 6.
+* Расположение разработанных библиотек.
+* Сборки расширений должны регистрироваться в конфигурационном файле модуля в формате `.json`.
+
+. Существующие проекты расширений необходимо перевести с .NET 4, на .NET 6. Для упрощения задачи можно воспользоваться https://learn.microsoft.com/ru-ru/dotnet/core/porting/[рекомендациями Microsoft по переносу кода в .NET Framework из .NET].
+. Рекомендуется получать библиотеки из продукта и подключать их к проекту. При компиляции следует обращать внимание на ошибку CA1416, которую следует рассматривать как критическую. Данными ошибками обозначены функции, которые не будут работать в Linux, такие функции необходимо изменить для поддержки мультиплатформенности.
+. Сборки могут размещаться в любом месте, главное условие -- в системе необходимо указать расположение сборки. Например, расширения {wc}а и {wf} загружаются из каталога `/usr/lib/docsvision/common/`.
++
+.Добавить еще один путь можно при помощи переменной окружения:
+* `DV_Docsvision\__Shared__Paths__DigDes=/path/to/your/custom/extensions/`.
+* Прописать путь в конфигурационном файле `appsettings.json`:
++
+[source,json]
+----
+{
+  "DocsVision": {
+    "Platform": {
+      "Server": {
+        "Extensions": {
+          "WebClientServerExtension": "DocsVision.WebClient.ServerExtension.ServerExtension, DocsVision.WebClient.ServerExtension, Version=6.0.0.0, Culture=neutral, PublicKeyToken=7148afe997f90519"
+        }
+      }
+    },
+    "Shared": {
+      "Paths": {
+        "DigDes": "/path/to/your/custom/extensions/"
+      }
+    }
+  }
+}
+----
++
+* Указать в отдельном файле в формате `.config`.
+
+
+
+Править основной appsettings.json не обязательно, можно положить json с регистрацией расширения в каталог /usr/lib/docsvision/platform/config/, там уже несколько должно быть, сделать по аналогии.
