--- a/modules/solutions/pages/extensions/extensions.adoc
+++ b/modules/solutions/pages/extensions/extensions.adoc
@@ -2,9 +2,9 @@
 
 Полноценный процесс персонализации решения не может обойтись без создания дополнений в клиентской или серверной части продукта. Организации может потребоваться внести в интерфейс {wincl}а изменения, не реализуемые в рамках объектной модели. Например, возможность формирования файла экспорта определённого формата непосредственно из {wincl}а.
 
-Также может потребоваться выполнять определённые методы в контексте сервера и с его привилегиями. Разработка расширений с использованием объектной модели {dv} не сложнее процесса разработки карточки, но создания плагинов обладает своими преимуществами.
+Также может потребоваться выполнять определённые методы в контексте сервера и с его привилегиями. Разработка расширений с использованием объектной модели {dv} не сложнее процесса разработки карточки, но создание плагинов обладает своими преимуществами.
 
-Методика разработки расширений для {wincl}а, во многом похожа на разработку карточек и описана в разделе "xref:extensions/winclient.adoc[Расширение {wincl}а]".
+Методика разработки расширений для {wincl}а во многом похожа на разработку карточек и описана в разделе "xref:extensions/winclient.adoc[Расширение {wincl}а]".
 
 Типы объектной модели, требующие реализации в процессе разработки серверных расширений, перечислены в разделе "xref:extensions/server-plugins.adoc[Серверные расширения]".
 
@@ -23,12 +23,13 @@
 * Расположение разработанных библиотек.
 * Сборки расширений должны регистрироваться в конфигурационном файле модуля в формате `.json`.
 
-. Существующие проекты расширений необходимо перевести с .NET 4, на .NET 6. Для упрощения задачи можно воспользоваться https://learn.microsoft.com/ru-ru/dotnet/core/porting/[рекомендациями Microsoft по переносу кода в .NET Framework из .NET].
-. Рекомендуется получать библиотеки из продукта и подключать их к проекту. При компиляции следует обращать внимание на ошибку CA1416, которую следует рассматривать как критическую. Данными ошибками обозначены функции, которые не будут работать в Linux, такие функции необходимо изменить для поддержки мультиплатформенности.
+. Существующие проекты расширений необходимо перевести с .NET 4 на .NET 6. Для упрощения задачи можно воспользоваться https://learn.microsoft.com/ru-ru/dotnet/core/porting/[рекомендациями Microsoft по переносу кода в .NET Framework из .NET].
+. Рекомендуется получать библиотеки из продукта и подключать их к проекту. При компиляции следует обращать внимание на ошибку CA1416. Ошибка должна расцениваться как критическая, т.к. данными ошибками обозначены функции, которые не будут работать в Linux, соответственно, их необходимо изменить для поддержки кросс-платформенности.
 . Сборки могут размещаться в любом месте, главное условие -- в системе необходимо указать расположение сборки. Например, расширения {wc}а и {wf} загружаются из каталога `/usr/lib/docsvision/common/`.
 +
-.Добавить еще один путь можно при помощи переменной окружения:
-* `DV_Docsvision\__Shared__Paths__DigDes=/path/to/your/custom/extensions/`.
+--
+.Доступны следующие варианты указания пути к сборке
+* Добавить еще один путь можно при помощи переменной окружения `DV_Docsvision\__Shared__Paths__DigDes=/path/to/your/custom/extensions/`.
 * Прописать путь в конфигурационном файле `appsettings.json`:
 +
 [source,json]
@@ -52,7 +53,6 @@
 ----
 +
 * Указать в отдельном файле в формате `.config`.
-
-
-
-Править основной appsettings.json не обязательно, можно положить json с регистрацией расширения в каталог /usr/lib/docsvision/platform/config/, там уже несколько должно быть, сделать по аналогии.
+--
++
+Править основной `appsettings.json` не обязательно, `.json` с регистрацией расширения можно добавить в каталог `/usr/lib/docsvision/platform/config/`. Новый файл можно создать по аналогии с уже находящимися в этом каталоге.
