TSK-5246 / GBL-3009 -- сравнил примеры в репозитории и в документации, дополнил, актуализировал под ВК 6.1

--- a/modules/cards/pages/edit-card.adoc
+++ b/modules/cards/pages/edit-card.adoc
@@ -2,6 +2,7 @@
 
 Под изменением данных карточки обычно подразумевается изменение значения полей её секций, т.к. именно поля выступают основным хранилищем её данных. Последовательность доступа к полям карточки в этом случае абсолютно аналогична приведенной в xref:get-section.adoc[Получение данных из секции карточки].
 
+[#base-api]
 == Базовый API
 
 .Изменение данных карточки в обычном режиме:
@@ -38,6 +39,7 @@ card.EndUpdate(); <.>
 
 Если в сценарии изменения данных предполагается изменение одного поля, то активировать режим отложенных изменений не требуется
 
+[#object-model]
 == Объектная модель
 
 На высоком уровне API сценарий изменения данных зависит от способа xref:get-section.adoc[представления секции] в объектной модели карточки.
