--- a/modules/ROOT/partials/approval-designer.adoc
+++ b/modules/ROOT/partials/approval-designer.adoc
@@ -12,18 +12,35 @@
 ******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalService.AddApprover_MT.adoc[]
 ******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalService.AddApprovers_MT.adoc[]
 ****** xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService_IN.adoc[]
+******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.AddAdditionalApprover_MT.adoc[]
+******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.AddCurrentApprover_MT.adoc[]
 ******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.AddDecision_MT.adoc[]
+******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.AddDecisionLocalization_MT.adoc[]
+******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.AddMainInfoNameLocalization_MT.adoc[]
 ******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.AddSelectedApprover_MT.adoc[]
 ******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.AddSelectedApprover_1_MT.adoc[]
 ******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.AddSelectedApprover_2_MT.adoc[]
 ******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.AddSelectedApprover_3_MT.adoc[]
 ******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.AddSelectedApprover_4_MT.adoc[]
 ******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.AddState_MT.adoc[]
+******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.CancelStage_MT.adoc[]
+******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.ChangeDocumentState_MT.adoc[]
+******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.CompleteInitiatorTask_MT.adoc[]
+******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.CompleteStage_MT.adoc[]
+******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.CompleteTask_MT.adoc[]
 ******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.CopyApproversFromDocument_MT.adoc[]
 ******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.CreateApprover_MT.adoc[]
+******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.CreateNextTask_MT.adoc[]
+******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.GetPossibleSemantics_MT.adoc[]
+******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.InsertCurrentApproverAfter_MT.adoc[]
+******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.ProcessExcludedApprovers_MT.adoc[]
+******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.RecallTask_MT.adoc[]
 ******* xref:ApprovalDesigner:ObjectModel/Services/GetStageApprovers_MT.adoc[]
 ******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.ReorderDecisions_MT.adoc[]
 ******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.ReorderSelectedApprovers_MT.adoc[]
+******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.ReturnStage_MT.adoc[]
+******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.SkipStage_MT.adoc[]
+******* xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService.StartStage_MT.adoc[]
 ****** xref:ApprovalDesigner:ObjectModel/Services/ISearchWordResolverService_IN.adoc[]
 ******* xref:ApprovalDesigner:ObjectModel/Services/ISearchWordResolverService.ExtractSearchWord_MT.adoc[]
 ******* xref:ApprovalDesigner:ObjectModel/Services/ISearchWordResolverService.ExtractSearchWord_1_MT.adoc[]
