TSK-5824 / GBL-3435 -- Выдача прав на СКД при отсутствии ПКД

--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyHandlingFlags_EN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyHandlingFlags_EN.adoc
@@ -21,4 +21,5 @@ public enum PowerOfAttorneyHandlingFlags
 |`None = 0` |Нет.
 |`SkipEntityMatchCheck = 1` |Не проверять соответствие сущностей доверенности со справочниками.
 |`SupportDistributedRegistryFederalTaxService = 2` |Включить формирование доверенности для ЦПРР.
+// |`DisableAutoAssignmentReadRightsToRepresentative = 4` |Отключить автоматическую выдачу права на СКД представителю-физлицу.
 |===
