--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/FindPowerOfAttorneyCardsResults_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/FindPowerOfAttorneyCardsResults_CL.adoc
@@ -2,7 +2,7 @@
 
 Содержит результаты поиска использования кодов полномочий в СКД
 
-* *Пространство имён:* ``xref:Entities/Entities_NS.adoc[DocsVision.BackOffice.ObjectModel.Services.Entities]`
+* *Пространство имён:* `xref:Entities/Entities_NS.adoc[DocsVision.BackOffice.ObjectModel.Services.Entities]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
 
 == Синтаксис
