TSK-5545 -- сделать все разделы навигации кликабельными

--- a/modules/ROOT/partials/appendix.adoc
+++ b/modules/ROOT/partials/appendix.adoc
@@ -5,7 +5,7 @@
 *** xref:appendix:user-session-properties.adoc[]
 *** xref:appendix:properties-page-activation-parameters.adoc[]
 *** xref:appendix:webservice/methods.adoc[]
-**** Подключения к серверу
+**** xref:appendix:server-connection.adoc[]
 ***** xref:appendix:SessionGetList.adoc[]
 ***** xref:appendix:webservice/server/SessionGetSettings.adoc[]
 ***** xref:appendix:webservice/server/SessionKeepAlive.adoc[]
@@ -15,7 +15,7 @@
 ***** xref:appendix:webservice/server/SessionSetSettings.adoc[]
 ***** xref:appendix:webservice/server/SessionTerminate.adoc[]
 ***** xref:appendix:webservice/server/SessionUpdateOfflineState.adoc[]
-**** Карточки
+**** xref:appendix:cards.adoc[]
 ***** xref:appendix:webservice/cards/CardArchive.adoc[]
 ***** xref:appendix:webservice/cards/CardArchiveGroup.adoc[]
 ***** xref:appendix:webservice/cards/CardCopy.adoc[]
@@ -37,7 +37,7 @@
 ***** xref:appendix:webservice/cards/CardTypeGetInfo.adoc[]
 ***** xref:appendix:webservice/cards/CardTypeGetList.adoc[]
 ***** xref:appendix:webservice/cards/CardTypeSetOptions.adoc[]
-**** Строки секций
+**** xref:appendix:section-rows.adoc[]
 ***** xref:appendix:webservice/rows/RowCopy.adoc[]
 ***** xref:appendix:webservice/rows/RowCreate.adoc[]
 ***** xref:appendix:webservice/rows/RowDelete.adoc[]
@@ -48,7 +48,7 @@
 ***** xref:appendix:webservice/rows/RowGetInfo.adoc[]
 ***** xref:appendix:webservice/rows/RowMove.adoc[]
 ***** xref:appendix:webservice/rows/RowSetData.adoc[]
-**** Нумераторы
+**** xref:appendix:numerators.adoc[]
 ***** xref:appendix:webservice/numerators/NumAllocateNumber.adoc[]
 ***** xref:appendix:webservice/numerators/NumAllocateNumbers.adoc[]
 ***** xref:appendix:webservice/numerators/NumChangeLeftBound.adoc[]
@@ -62,7 +62,7 @@
 ***** xref:appendix:webservice/numerators/NumReleaseNumber.adoc[]
 ***** xref:appendix:webservice/numerators/NumReleaseNumberByID.adoc[]
 ***** xref:appendix:webservice/numerators/NumReleaseNumbers.adoc[]
-**** Файлы
+**** xref:appendix:files.adoc[]
 ***** xref:appendix:webservice/files/FileArchive.adoc[]
 ***** xref:appendix:webservice/files/FileArchiveGroup.adoc[]
 ***** xref:appendix:webservice/files/FileBringOnLine.adoc[]
@@ -84,7 +84,7 @@
 ***** xref:appendix:webservice/files/FileTakeOffLine.adoc[]
 ***** xref:appendix:webservice/files/FileTakeOffLineGroup.adoc[]
 ***** xref:appendix:webservice/files/FileWrite.adoc[]
-**** Папки
+**** xref:appendix:folders.adoc[]
 ***** xref:appendix:webservice/folders/FolderCopyData.adoc[]
 ***** xref:appendix:webservice/folders/FolderCopyEx.adoc[]
 ***** xref:appendix:webservice/folders/FolderDelete.adoc[]
@@ -97,28 +97,28 @@
 ***** xref:appendix:webservice/folders/FolderMarkAll.adoc[]
 ***** xref:appendix:webservice/folders/FolderPurge.adoc[]
 ***** xref:appendix:webservice/folders/FolderSetCardDescriptor.adoc[]
-**** Поиск
+**** xref:appendix:search.adoc[]
 ***** xref:appendix:webservice/search/SearchCards.adoc[]
 ***** xref:appendix:webservice/search/SearchCardsEx.adoc[]
 ***** xref:appendix:webservice/search/SearchRows.adoc[]
-**** Блокировки
+**** xref:appendix:locks.adoc[]
 ***** xref:appendix:webservice/locks/LockClear.adoc[]
 ***** xref:appendix:webservice/locks/LockClearGroup.adoc[]
 ***** xref:appendix:webservice/locks/LockGetInfo.adoc[]
 ***** xref:appendix:webservice/locks/LockGetList.adoc[]
 ***** xref:appendix:webservice/locks/LockSet.adoc[]
-**** Библиотеки карточек
+**** xref:appendix:cardlibs.adoc[]
 ***** xref:appendix:webservice/cardlibs/CardLibGetInfo.adoc[]
 ***** xref:appendix:webservice/cardlibs/CardLibGetInfoInstall.adoc[]
 ***** xref:appendix:webservice/cardlibs/CardLibGetList.adoc[]
-**** Цветовые метки карточки
+**** xref:appendix:labels.adoc[]
 ***** xref:appendix:webservice/labels/LabelClearCard.adoc[]
 ***** xref:appendix:webservice/labels/LabelCreate.adoc[]
 ***** xref:appendix:webservice/labels/LabelDelete.adoc[]
 ***** xref:appendix:webservice/labels/LabelGetList.adoc[]
 ***** xref:appendix:webservice/labels/LabelSetCard.adoc[]
 ***** xref:appendix:webservice/labels/LabelSetInfo.adoc[]
-**** Расширенные метаданные
+**** xref:appendix:extended-metadata.adoc[]
 ***** xref:appendix:webservice/extended-metadata/DynamicFieldCreate.adoc[]
 ***** xref:appendix:webservice/extended-metadata/DynamicFieldDelete.adoc[]
 ***** xref:appendix:webservice/extended-metadata/DynamicFieldGetInfo.adoc[]
@@ -129,7 +129,7 @@
 ***** xref:appendix:webservice/extended-metadata/DynamicSectionDelete.adoc[]
 ***** xref:appendix:webservice/extended-metadata/DynamicSectionGetInfo.adoc[]
 ***** xref:appendix:webservice/extended-metadata/DynamicSectionUpdate.adoc[]
-**** Курсоры
+**** xref:appendix:cursors.adoc[]
 ***** xref:appendix:webservice/cursors/CursorClose.adoc[]
 ***** xref:appendix:webservice/cursors/CursorGetPageCount.adoc[]
 ***** xref:appendix:webservice/cursors/CursorOpenCardData.adoc[]
@@ -137,13 +137,13 @@
 ***** xref:appendix:webservice/cursors/CursorReadPage.adoc[]
 ***** xref:appendix:webservice/cursors/CursorRefreshCardData.adoc[]
 ***** xref:appendix:webservice/cursors/CursorRefreshSectionData.adoc[]
-**** Иконки
+**** xref:appendix:icons.adoc[]
 ***** xref:appendix:webservice/icons/IconCreate.adoc[]
 ***** xref:appendix:webservice/icons/IconDelete.adoc[]
 ***** xref:appendix:webservice/icons/IconGetInfoGroup.adoc[]
 ***** xref:appendix:webservice/icons/IconGetList.adoc[]
 ***** xref:appendix:webservice/icons/IconSetInfo.adoc[]
-**** Прочее
+**** xref:appendix:misc.adoc[]
 ***** xref:appendix:webservice/misc/DecrementFeatureUsage.adoc[]
 ***** xref:appendix:webservice/misc/ExtensionExecuteCursorMethod.adoc[]
 ***** xref:appendix:webservice/misc/ExtensionExecuteMethod.adoc[]
@@ -159,35 +159,34 @@
 ***** xref:appendix:webservice/misc/UserProfileGetAccount.adoc[]
 ***** xref:appendix:webservice/misc/UserProfileGetInfo.adoc[]
 **** xref:appendix:webservice/samples.adoc[]
-*** Элементы управления
-**** xref:appendix:controls/docsvision/dv-controls.adoc[]
-***** xref:appendix:controls/docsvision/CardChooseBox.adoc[]
-***** xref:appendix:controls/docsvision/CategoryListView.adoc[]
-***** xref:appendix:controls/docsvision/CommunicativeChooseBox.adoc[]
-***** xref:appendix:controls/docsvision/CommunicativeMultiChooseBox.adoc[]
-***** xref:appendix:controls/docsvision/CommunicatorControl.adoc[]
-***** xref:appendix:controls/docsvision/ExportDialog.adoc[]
-***** xref:appendix:controls/docsvision/FieldSelector.adoc[]
-***** xref:appendix:controls/docsvision/FolderChooseBox.adoc[]
-***** xref:appendix:controls/docsvision/GridEx.adoc[]
-***** xref:appendix:controls/docsvision/HistoryGrid.adoc[]
-***** xref:appendix:controls/docsvision/HtmlBrowser.adoc[]
-***** xref:appendix:controls/docsvision/Preview.adoc[]
-***** xref:appendix:controls/docsvision/ReferenceListView.adoc[]
-***** xref:appendix:controls/docsvision/RowChooseBox.adoc[]
-***** xref:appendix:controls/docsvision/RowMultiChooseBox.adoc[]
-***** xref:appendix:controls/docsvision/TaskTreeView.adoc[]
-***** xref:appendix:controls/docsvision/UniqueRowChooseBox.adoc[]
-***** xref:appendix:controls/docsvision/UniversalItemChooseBox.adoc[]
-**** xref:appendix:controls/obsolete/obsolete-controls.adoc[]
-***** xref:appendix:controls/obsolete/data-source/data-sources.adoc[]
-****** xref:appendix:controls/obsolete/data-source/SessionSource.adoc[]
-****** xref:appendix:controls/obsolete/data-source/CardDataSource.adoc[]
-****** xref:appendix:controls/obsolete/data-source/RowDataSource.adoc[]
-****** xref:appendix:controls/obsolete/data-source/InfoRowDataSource.adoc[]
-****** xref:appendix:controls/obsolete/data-source/ReportDataSource.adoc[]
-***** xref:appendix:controls/obsolete/BoundChooseBox.adoc[]
-***** xref:appendix:controls/obsolete/CardChooseBox.adoc[]
-***** xref:appendix:controls/obsolete/RowChooseBox.adoc[]
-***** xref:appendix:controls/obsolete/BoundTreeView.adoc[]
-***** xref:appendix:controls/obsolete/WizardConrol.adoc[]
+*** xref:appendix:controls/docsvision/dv-controls.adoc[]
+**** xref:appendix:controls/docsvision/CardChooseBox.adoc[]
+**** xref:appendix:controls/docsvision/CategoryListView.adoc[]
+**** xref:appendix:controls/docsvision/CommunicativeChooseBox.adoc[]
+**** xref:appendix:controls/docsvision/CommunicativeMultiChooseBox.adoc[]
+**** xref:appendix:controls/docsvision/CommunicatorControl.adoc[]
+**** xref:appendix:controls/docsvision/ExportDialog.adoc[]
+**** xref:appendix:controls/docsvision/FieldSelector.adoc[]
+**** xref:appendix:controls/docsvision/FolderChooseBox.adoc[]
+**** xref:appendix:controls/docsvision/GridEx.adoc[]
+**** xref:appendix:controls/docsvision/HistoryGrid.adoc[]
+**** xref:appendix:controls/docsvision/HtmlBrowser.adoc[]
+**** xref:appendix:controls/docsvision/Preview.adoc[]
+**** xref:appendix:controls/docsvision/ReferenceListView.adoc[]
+**** xref:appendix:controls/docsvision/RowChooseBox.adoc[]
+**** xref:appendix:controls/docsvision/RowMultiChooseBox.adoc[]
+**** xref:appendix:controls/docsvision/TaskTreeView.adoc[]
+**** xref:appendix:controls/docsvision/UniqueRowChooseBox.adoc[]
+**** xref:appendix:controls/docsvision/UniversalItemChooseBox.adoc[]
+*** xref:appendix:controls/obsolete/obsolete-controls.adoc[]
+**** xref:appendix:controls/obsolete/data-source/data-sources.adoc[]
+***** xref:appendix:controls/obsolete/data-source/SessionSource.adoc[]
+***** xref:appendix:controls/obsolete/data-source/CardDataSource.adoc[]
+***** xref:appendix:controls/obsolete/data-source/RowDataSource.adoc[]
+***** xref:appendix:controls/obsolete/data-source/InfoRowDataSource.adoc[]
+***** xref:appendix:controls/obsolete/data-source/ReportDataSource.adoc[]
+**** xref:appendix:controls/obsolete/BoundChooseBox.adoc[]
+**** xref:appendix:controls/obsolete/CardChooseBox.adoc[]
+**** xref:appendix:controls/obsolete/RowChooseBox.adoc[]
+**** xref:appendix:controls/obsolete/BoundTreeView.adoc[]
+**** xref:appendix:controls/obsolete/WizardConrol.adoc[]
