--- a/modules/ROOT/partials/samples.adoc
+++ b/modules/ROOT/partials/samples.adoc
@@ -1,5 +1,5 @@
-* Сборник примеров
-** Использование объектной модели уровня бизнес-логики
+* xref:samples:index.adoc[]
+** xref:samples:object-model/index.adoc[]
 *** xref:samples:object-model/init-context.adoc[]
 *** xref:samples:object-model/card-xref-add.adoc[]
 *** xref:samples:object-model/change-card-state.adoc[]
@@ -8,19 +8,19 @@
 *** xref:samples:object-model/check-signature.adoc[]
 *** xref:samples:object-model/staff-sync-ad.adoc[]
 *** xref:samples:object-model/approval.adoc[]
-** Использование базового API
+** xref:samples:use-api/index.adoc[]
 *** xref:samples:use-api/create-view.adoc[]
 *** xref:samples:use-api/delayed-changes.adoc[]
 *** xref:samples:use-api/cursor-on-folder.adoc[]
 *** xref:samples:use-api/buisness-process-start.adoc[]
 *** xref:samples:use-api/search.adoc[]
-** Примеры реализации компонента карточек, библиотек карточек и расширений
+** xref:samples:components/index.adoc[]
 *** xref:samples:components/card-event-handler.adoc[]
 *** xref:samples:components/command-plugin.adoc[]
 *** xref:samples:components/resources-movement-card.adoc[]
 *** xref:samples:components/employee-control.adoc[]
 *** xref:samples:components/properties-page.adoc[]
-** Примеры использования API Workflow
+** xref:samples:workflow-api/index.adoc[]
 *** xref:samples:workflow-api/get-user-name.adoc[]
 *** xref:samples:workflow-api/get-user-deputy.adoc[]
 *** xref:samples:workflow-api/get-card-url.adoc[]
