--- a/modules/ROOT/partials/workflow.adoc
+++ b/modules/ROOT/partials/workflow.adoc
@@ -1,5 +1,5 @@
 ** xref:bpms:develop-environment.adoc[]
-*** Программные компоненты СУБП
+*** xref:bpms:components.adoc[]
 **** xref:bpms:gates.adoc[]
 ***** xref:bpms:gate-client.adoc[]
 ***** xref:bpms:gate-server.adoc[]
