Не методы, а классы (C) Нефёдов В.

--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData_CL.adoc
@@ -27,7 +27,7 @@ public sealed class PowerOfAttorneyEMCHDData : PowerOfAttorneyData
 
 |===
 
-== Методы
+== Конструкторы
 
 [cols=",",options="header"]
 |===
